# heimdall

./: .gitignore  CMakeLists.txt  README.md
cmake/: EmbedResource.cmake
contrib/: config_sample.json
src/: CMakeLists.txt  main.cpp
src/config/: config.cpp  config.hpp  debug.cpp  debug.hpp  details.hpp  schema.json  sources.hpp
src/core/: command_line.cpp  command_line.hpp  service.cpp  service.hpp
src/source/: factory.hpp  provider.hpp  source.hpp
