file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS *.cpp *.hpp)

add_executable(${PROJECT_NAME} ${SOURCES})

target_include_directories(${PROJECT_NAME} PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${3RDPARTY_INCLUDES}
)

target_link_libraries(${PROJECT_NAME} ${3RDPARTY_LIBRARIES})

target_compile_definitions(${PROJECT_NAME} PRIVATE 
    -DPROJECT_VERSION="${CMAKE_PROJECT_VERSION}"
    -DRAPIDJSON_HAS_STDSTRING
    -DRAPIDJSON_SCHEMA_USE_INTERNALREGEX=0
)
